update jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                 script {
                     sh "echo deleting existing image and container"
                     try {
-                        rm /usr/src/app/.env
+                        sh "rm /usr/src/app/.env"
                         sh "docker kill user-service"
                         sh "docker rm user-service"
                         sh "docker rmi user-service"
